Fixed some small bugs in mentor page, fixed alignment

--- a/public/css/primary.css
+++ b/public/css/primary.css
@@ -70,7 +70,7 @@ a.btn-person-font {
 
 .main-middle {
     position: relative;
-    overflow-y: hidden;
+    overflow: hidden;
     margin-bottom: auto;
     flex-shrink: 100;
     height: calc(var(--vh, 1vh) * 100 * 0.8);
@@ -87,7 +87,7 @@ a.btn-person-font {
 }
 
 .main-mentors {
-    background-color: var(--color-secondary);
+    background-color: var(--color-quinary);
     color: var(--color-font-light);
     text-align: center;
     text-shadow: 1px 1px 1px black;
@@ -135,6 +135,8 @@ nav:hover {
 .btn-mentor-secondary {
     opacity: 0;
     display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: var(--color-quinary);
     border-radius: 50%;
     height: 30px;
@@ -173,7 +175,7 @@ nav:hover {
     display: inline-block;
     padding: 10px 20px;
     border-radius: 10px;
-    background-color: var(--color-quinary);
+    background-color: var(--color-secondary);
     box-shadow: 2px 2px 6px 0px gray;
 }
 
